# MultilayerNeuralNetwork

./: CMakeLists.txt  README  cmake_common.txt
data/: train.t7  weight.txt
python/: mat.py  max_idx.py  split.py  test.py  test_p.py
src/nn/from_binary/: dataset.cc  dataset.h
src/nn/gflag/: flag.cc  flag.h
src/nn/main/: .main.cc.swp  LookupTable.cc  NN.cc  NN.h  main.cc  train.cc  util.cc  util.h
src/nn/net/: Bias_Layer.cc  LookupTable.cc  LookupTable.h  LookupTable_test.cc  NN.cc  NN.h  NN_test.cc  bias_layer.cc  bias_layer.h  lookup_table.cc  lookup_table.h  nn.cc  nn.h  nn_test.cc
src/nn/solver/: sgd.cc  sgd.h
src/nn/test/: all_test.cc  read_from_binary.cc  softmax.cc
src/nn/tool/: util.cc  util.h
src/nn/train/: read_data.cc  train.cc  trans_data.cc
torch/: build_model.lua  doall.lua  load_data.lua  test_data.lua  train_model.lua
torch/cnn/: doall.lua  load_data.lua  model_cnn.lua  test_grad.lua
torch/nn/: load_data.lua  test_grad.lua
torch/test_forward/: build_model.lua  load_data.lua  test_data.lua
torch/test_grad/: build_model.lua  load_data.lua  test_grad.lua  train_model.lua
