# Main entry of blas_nn project build system
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(${CMAKE_SOURCE_DIR}/cmake_common.txt)
MESSAGE(STATUS "CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")
MESSAGE(STATUS "CMAKE_BINARY_DIR = ${CMAKE_BINARY_DIR}")
MESSAGE(STATUS "PROTO_DIR = ${PROTO_DIR}")

PROJECT(blas_nn)

SET(SRC_ROOT ${PROJECT_SOURCE_DIR}/src/nn)

FILE(GLOB_RECURSE src_list "*.cc")

ADD_EXECUTABLE(${exec_name} ${SRC_ROOT}/main/main.cc ${lib_src})
TARGET_LINK_LIBRARIES(${exec_name} ${LIBS})
SET_TARGET_PROPERTIES(${exec_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

FILE(GLOB_RECURSE src_list "*.cc")


ADD_EXECUTABLE(softmax ${SRC_ROOT}/main/softmax.cc ${lib_src})
TARGET_LINK_LIBRARIES(softmax ${LIBS})
SET_TARGET_PROPERTIES(softmax PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)



